GUI fix for rt log viewer, CPU box size and time label placement
git-svn-id: https://overture.svn.sourceforge.net/svnroot/overture/trunk@2394 2b2d4d09-c93c-414a-ad04-6e973f5c1cff